--- a/composer.json
+++ b/composer.json
@@ -5,5 +5,8 @@
   "license": "MIT",
   "require-dev": {
     "drush/drush": "^8.0"
+  },
+  "suggest": {
+    "composer/installers": "Install plugin to correct location"
   }
 }
